force-app/main/default/objects/Sport__c/fields/Group_Sport__c.field-meta.xml
<CustomField>
    <fullName>Group_Sport__c</fullName>
    <label>Group Sport</label>
    <length>20</length>
    <type>Text</type>
</CustomField>