force-app/main/default/objects/Sport__c/fields/Individual_Sport__c.field-meta.xml
<CustomField>
    <fullName>Individual_Sport__c</fullName>
    <label>Individual Sport</label>
    <length>20</length>
    <type>Text</type>
</CustomField>