force-app/main/default/objects/Sport__c/fields/Sports_Coach__c.field-meta.xml
<CustomField>
    <fullName>Sports_Coach__c</fullName>
    <label>Sports Coach</label>
    <length>20</length>
    <type>Text</type>
</CustomField>